Add comprehensive API and integration tests for SuiFlash Bot and protocols
- Implemented unit tests for FlashLoanRequest serialization and validation.
- Added integration tests for full protocol data collection, strategy selection, gas estimation, and fee calculation accuracy.
- Developed extensive tests for Bucket and Navi protocols, covering fee calculations, borrow/settle cycles, and receipt handling.
- Ensured robust error handling and validation across various scenarios.
- Established a framework for testing routing strategies and multi-asset support.

--- a/suiflash-bot/.env.example
+++ b/suiflash-bot/.env.example
@@ -5,8 +5,8 @@ SUI_RPC_URL=https://fullnode.testnet.sui.io:443
 PRIVATE_KEY=your_private_key_here
 
 # SuiFlash Contract Configuration
-SUI_FLASH_PACKAGE_ID=0x1234567890abcdef
-SUI_FLASH_CONFIG_OBJECT_ID=0xabcdef1234567890
+SUI_FLASH_PACKAGE_ID=0x1234567890abcdef1234567890abcdef12345678
+SUI_FLASH_CONFIG_OBJECT_ID=0xabcdef1234567890abcdef1234567890abcdef12
 
 # Protocol Package IDs
 CONTRACT_PACKAGE_ID=0x1
@@ -20,3 +20,6 @@ SERVER_PORT=3000
 # Bot Configuration
 REFRESH_INTERVAL_MS=10000
 STRATEGY=cheapest  # or "highest_liquidity"
+
+# Fee Configuration
+SERVICE_FEE_BPS=40  # 0.40% service fee
