--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,29 @@ resolver = "2"
 [workspace.package]
 edition = "2024"
 license = "Apache-2.0"
-authors = ["SuiFlash Contributors"]
+authors = ["Bob Liu <akagi201@gmail.com>"]
 repository = "https://github.com/longcipher/suiflash"
 description = "SuiFlash workspace: suiflash-bot (Rust backend) + suiflash-contract (Move)"
+
+[workspace.dependencies]
+artemis = { git = "https://github.com/akjong/artemis" }
+async-trait = "0.1"
+axum = "0.8"
+blake3 = "1"
+config = "0.15"
+dotenv = "0.15"
+eyre = "0.6"
+hex = "0.4"
+reqwest = "0.12"
+serde = "1"
+serde_json = "1"
+sui_json_rpc_types = { git = "https://github.com/mystenlabs/sui", package = "sui-json-rpc-types" }
+sui_sdk = { git = "https://github.com/mystenlabs/sui", package = "sui-sdk" }
+sui_types = { git = "https://github.com/mystenlabs/sui", package = "sui-types" }
+tokio = "1"
+toml = "0.9"
+tracing = "0.1"
+tracing-subscriber = "0.3"
+
+# Dev dependencies
+tokio-test = "0.4"
